# Tiny-C

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: AddTinyC.cmake  CodeCoverage.cmake
examples/: add.txt  cond.c  func  func.c
include/tiny-c/: Lexer.h
include/tiny-c/AST/: AST.h
include/tiny-c/Basic/: LLVM.h  TokenKinds.def  TokenKinds.h
include/tiny-c/CodeGen/: CodeGen.h
include/tiny-c/Lexer/: Lexer.h  Token.h
include/tiny-c/Parser/: Parser.h
lib/: CMakeLists.txt  Lexer.cpp
lib/CodeGen/: CMakeLists.txt  CodeGen.cpp
lib/Lexer/: CMakeLists.txt  Lexer.cpp
lib/Parser/: CMakeLists.txt  Parser.cpp
test/: CMakeLists.txt  binary_expression.c  function_call.c  if.c  if.ll  lit.cfg.py  lit.site.cfg.py.in  while.c
tools/: CMakeLists.txt  Driver.cpp
unittest/: CMakeLists.txt  LexerTest.cpp  ParserTest.cpp
